no wrap for content editable to prevent distortion
- temp solution

--- a/app/styles/assignments.scss
+++ b/app/styles/assignments.scss
@@ -69,6 +69,7 @@
                         float:left;
                         margin:2px 0;
                         padding:5px;
+                        white-space:nowrap;
                     }
 
                     [contenteditable="true"] {
