--- a/app/styles/content-editable.scss
+++ b/app/styles/content-editable.scss
@@ -1,4 +1,6 @@
 [contenteditable="true"] {
+    white-space:nowrap;
+    
     &::selection {
         background:rgba(0,0,0,.7);
         color:#fff;
